[metadata]
name = dienen
version = 0.0.1
author = Leonardo Pepino
author_email = leonardodpepino@gmail.com
description = Train deep neural networks using configuration files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mrpep/dienen
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    pyknife >= 0.0.3
    kahnfigh >= 0.0.2
    networkx >= 2.5.1
    joblib >= 1.0.1
    dpath
    tensorflow >=2.3
    tensorflow_probability
    tensorflow_addons
    nvgpu
    matplotlib
    librosa
    wandb
    ruamel-yaml
    
[options.packages.find]
where = src